A lot of copy paste
Have to check pom.xml and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springauth
-spring.datasource.username=AdminUser
-spring.datasource.password=skg35^s!
+spring.datasource.url=jdbc:mysql://localhost:3306/{ENTER DB NAME}
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
