--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,7 @@
 	<artifactId>Birthday_JobAnniversary_Wisher-Backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Birthday_JobAnniversary_Wisher-Backend</name>
-	<description>Project for APIs for mini-project</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+	<description>Birthday and Job Anniversary Wisher Backend Project</description>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc -->
 		<dependency>
@@ -23,7 +20,14 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<version>2.5.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -32,7 +36,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
