--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+server.servlet.context-path=/api
 app.version=1.0.0
 server.port=8080
+spring.output.ansi.enabled= always
 
 ## DATABASE CONFIGS
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
