Database name, username, password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,9 @@ spring.output.ansi.enabled= always
 
 ## DATABASE CONFIGS
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bridgeschema?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-#spring.datasource.password=root123
-spring.datasource.password=zY5vMk#
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=user
+spring.datasource.password=pwd123
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
