--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=f91faadb79fe3c
+spring.mail.password=3130a6a6290c48
+#spring.mail.password=${mail.password}
+
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
