--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.output.ansi.enabled= always
 
 ## DATABASE CONFIGS
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=user
-spring.datasource.password=pwd123
+spring.datasource.url=jdbc:mysql://localhost:3306/db_name?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
@@ -15,11 +15,25 @@ spring.jpa.hibernate.show-sql=true
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=25
-spring.mail.username=f91faadb79fe3c
-spring.mail.password=3130a6a6290c48
+#spring.mail.host=smtp.mailtrap.io
+#spring.mail.port=25
+#spring.mail.username=f91faadb79fe3c
+#spring.mail.password=3130a6a6290c48
 #spring.mail.password=${mail.password}
 
 spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=username
+spring.mail.password=password
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
